src/styles/index.scss
@import "_reset";

:root {
    --max-width: 1216px;
    --margin-page-primary: 20px;
    //fonts weight
    --fw-regular: 400;
    --fw-medium: 500;
    --fw-bold: 700;
    //fonts size
    --fs-300: 13px;
    --fs-400: 15px;
    --fs-500: 24px;
    --fs-800: 42px;
    //color
    --clr-dark-800: #100e19;
    --clr-dark-700: #1f1b2e;
    --clr-grey-300: #a5a1b2;
    --clr-grey-100: #d9d7e0;
}


body {
    font-family: var(--ivi-font);//set from _app.tsx
    background-color: var(--clr-dark-800);
    color: #ffffff;
}

